# internal/routes/auth.go
@@ -4,6 +4,7 @@ import (
 	"github.com/gofiber/fiber/v2"
 	"gorm.io/gorm"
 	"v/internal/handlers"
+	"v/internal/middlewares"
 	"v/internal/repositories"
 	"v/internal/services"
 	"v/pkg/providers"
@@ -16,4 +17,7 @@ func SetupAuth(routes fiber.Router, db *gorm.DB, jwt *providers.Jwt) {
 
 	routes.Post("/signup", handler.Signup)
 	routes.Post("/login", handler.Login)
+
+	protected := routes.Use(middlewares.IsAuthenticated(service, jwt))
+	protected.Get("/me", handler.Me)
 }
